...
    "Clap Push-Up","Ring Push-Up","Pseudo Planche Push-Up","T-Push-Up","Chest Dip","Weighted Push-Up",
    // Other
    "Svend Press","Landmine Press","Resistance Band Fly","Hex Press","Plate Press","TRX Fly"
  ],
  Back:[
    // Pull-Up
    "Pull-Up","Chin-Up","Wide-Grip Pull-Up","Neutral-Grip Pull-Up","Weighted Pull-Up",
    "Assisted Pull-Up","Close-Grip Pull-Up","Ring Pull-Up","Band-Assisted Pull-Up","Scapular Pull-Up",
    // Pulldown
    "Lat Pulldown","Wide-Grip Lat Pulldown","Close-Grip Lat Pulldown","Reverse-Grip Lat Pulldown",
    "Single-Arm Lat Pulldown","V-Bar Lat Pulldown","Straight-Arm Pulldown","Kneeling Pulldown","Pullover Machine",
    // Row
    "Bent-Over Row","Underhand Bent-Over Row","Pendlay Row","T-Bar Row","Seated Cable Row",
...
